<resources>
    <string name="app_name">AlmostUdemy</string>
    <string name="etUsername">username</string>
    <string name="etPassword">password</string>
    <string name="btnLogin">login</string>
    <string name="tvNotRegistered">Not Registered?</string>
    <string name="tvRegister">SIGN UP</string>
    <string name="btnSignUp">Sign up</string>
    <string name="etFirstName">First Name</string>
    <string name="etLastName">Last Name</string>
    <string name="etEditUsername">Username</string>
    <string name="etEditPassword">Password</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="tvLogin">Login</string>
    <string name="tvAlreadyRegistered">Already Registered?</string>
    <string name="etEmail">Email</string>
    <string name="cbRemember">Remember me</string>
    <string name="nav_courseCatalog">Catalog</string>
    <string name="nav_courses">My Courses</string>
    <string name="nav_account">My Account</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About</string>
    <string name="menuFirstItemTitle">General</string>
    <string name="menuSecondItemTitle">Communicate</string>
    <string name="tvHeader">Almost Udemy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btnLogOut">Log Out</string>
    <string name="btnDeleteAccount">Delete account</string>
    <string name="tvForgotPass">Forgot password?</string>
    <string name="tvResetPass">Reset Password</string>
    <string name="etResetPassword">New Password</string>
    <string name="btnResetPass">Reset</string>
    <string name="btnGenerateReport1">Generate First Report</string>
    <string name="btnGenerateReport2">Generate Second Report</string>
    <string name="btnExport">Export</string>
    <string name="btnFinished">Finish Course</string>
    <string name="tvContent">Content</string>
    <string name="tvMyTitleText">My Title</string>
    <string name="changeProfilePic">Change Profile Picture</string>
</resources>
