<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="270dp"
            android:src="@drawable/username" />

        <EditText
            android:id="@+id/etResetUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:hint="@string/etUsername"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/pass" />

        <EditText
            android:id="@+id/etResetPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/etResetPassword"
            android:inputType="textPassword" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/pass" />

        <EditText
            android:id="@+id/etResetConfirmPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/etConfirmPassword"
            android:inputType="textPassword" />


    </LinearLayout>


    <Button
        android:id="@+id/btnResetPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnResetPass" />

</LinearLayout>